--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "axios": "^1.1.3",
+    "sweetalert2": "^11.15.10",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
   },
